--- a/Is-Prokat_Sport_Invent/Is-Prokat_Sport_Invent/Pages/AdminPage.xaml
+++ b/Is-Prokat_Sport_Invent/Is-Prokat_Sport_Invent/Pages/AdminPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Is_Prokat_Sport_Invent.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AdminPage" Background="White">
+      Title="ИС- Прокат спортивного инвентаря вывод пользователей" Background="White">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -24,24 +24,28 @@
                                 <ColumnDefinition Width="200"></ColumnDefinition>
                                 <ColumnDefinition Width="200"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
+                            
+                                <StackPanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left">
 
-                            <StackPanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="{Binding UserLastName}"></TextBlock>
-                                    <TextBlock Text=" "></TextBlock>
-                                    <TextBlock Text="{Binding UserName}"></TextBlock>
-                                    <TextBlock Text=" "></TextBlock>
-                                    <TextBlock Text="{Binding UserFirstName}"></TextBlock>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding UserLastName}"></TextBlock>
+                                        <TextBlock Text=" "></TextBlock>
+                                        <TextBlock Text="{Binding UserName}"></TextBlock>
+                                        <TextBlock Text=" "></TextBlock>
+                                        <TextBlock Text="{Binding UserFirstName}"></TextBlock>
+                                    </StackPanel>
+
+                                    <TextBlock Text="{Binding UserEmail}"></TextBlock>
+                                    <TextBlock Text="{Binding UserDateBirth ,StringFormat=yyyy-MM-dd}"></TextBlock>
+                                    <TextBlock Text="{Binding UserPhone}"></TextBlock>
                                 </StackPanel>
-                                <TextBlock Text="{Binding UserEmail}"></TextBlock> 
-                                <TextBlock Text="{Binding UserDateBirth ,StringFormat=yyyy-MM-dd}"></TextBlock>
-                                <TextBlock Text="{Binding UserPhone}"></TextBlock>
-                            </StackPanel>
+                            
                             <TextBlock Grid.Column="1" Text="{Binding Role.RoleName}"></TextBlock>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
         </Grid>
+        <Button Grid.Row="1" Content="Добавить" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="Adduser_Button" Click="Adduser_Button_Click"></Button>
     </Grid>
 </Page>
