--- a/Is-Prokat_Sport_Invent/Is-Prokat_Sport_Invent/MainWindow.xaml
+++ b/Is-Prokat_Sport_Invent/Is-Prokat_Sport_Invent/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Is_Prokat_Sport_Invent"
         mc:Ignorable="d"
-        Title="{Binding ElementName=NewFrame ,Path=Content.Title}" Height="450" Width="800">
+        Title="{Binding ElementName=NewFrame ,Path=Content.Title}" Height="450" Width="800" MinHeight="450" MinWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"></RowDefinition>
